# three-body-periodic

./: .gitignore  Makefile  README.md
app/: index.html  script.js  styles.css
app/examples/: bhh_satellites_table_3.js  bhh_satellites_table_4.js  choreographies.js  equal_mass.js  free_fall.js  free_fall_8_2.js  free_fall_8_6.js  unequal_mass.js
app/wasm/: three_body_wasm_bg.wasm
docs/: 2d.js  3d.js  common.js  help.css  help.js  ic.js  index.html  index_3d.html  info.css  info.js  legend.css  modal.css  modal.js  script.js  sim-worker.js  styles.css  util.js  video.js
docs/3d/: 3d_examples.js  data.csv  script.js
docs/examples/: 3d_examples.js  bhh_satellites.js  broucke_boggs.js  choreographies.js  custom.js  equal_mass.js  free_fall.js  free_fall_large.js  free_fall_puzynin_600.js  free_fall_puzynin_sd.js  matt_sheen.js  sd_80.csv  sol_80_600.csv  sol_81.csv  unequal_mass.js
docs/wasm/: three_body_wasm.js  three_body_wasm_bg.wasm
integrators/: Cargo.toml  ic.toml  ic_feagin.toml
integrators/src/: dop853.rs  dop853_hp.rs  examples.rs  lib.rs  qd.rs  runge_kutta.rs  types.rs  utils.rs  velocity_verlet.rs
integrators/src/feagin14/: algo.rs  coef.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
