[package]
name = "three_body"
version = "0.1.0"
edition = "2024"

[features]
default = []
cli = ["clap", "serde", "toml", "plotters", "anyhow"]


[dependencies]
bigdecimal = "0.4.8"
once_cell = "1.21.3"

# Binary-only deps (optional; only compiled when --features cli)
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.9", optional = true }
plotters = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }

[[bin]]
name = "orbit-plot"
path = "src/bin/orbit_plot.rs"
required-features = ["cli"]